<resources>
    <string name="app_name">云知枢服务端</string>

    <!--标题-->
    <string name="app_newly_project">新建项目</string>
    <string name="app_customer_level">客户级别</string>
    <string name="app_newly_success">创建成功</string>
    <string name="app_project_join">邀请加入</string>
    <string name="app_appoint_person">指派项目经理</string>
    <string name="app_project_survey">项目概况</string>
    <string name="app_template_select">从模版选择</string>
    <string name="app_project_copy">从项目复制</string>
    <string name="app_person_info">个人信息</string>
    <string name="app_modify_call">修改昵称</string>
    <string name="app_feedback">我要吐槽</string>
    <string name="app_my_card">我的名片</string>
    <string name="app_setting">设置</string>
    <string name="app_account_setting">账号与绑定设置</string>
    <string name="app_replace_phone">更换手机号</string>
    <string name="app_edition_info">关于云知枢</string>
    <string name="app_news_setting">消息设置</string>
    <string name="app_select_company">选择企业/团队</string>
    <string name="app_establish_company">创建企业/团队</string>
    <string name="app_scan_join">加入企业</string>
    <string name="app_personal_info">个人信息</string>
    <string name="app_remarks">备注</string>
    <string name="app_company_logo">企业LOGO</string>
    <string name="app_edit_staff">编辑员工</string>
    <string name="app_department">选择部门</string>
    <string name="app_batch_add_staff">移动成员</string>
    <string name="app_found_project">新建项目</string>
    <string name="app_project_level">客户级别</string>
    <string name="app_Team_Apply">团队信息</string>
    <string name="app_select_person">选择销售顾问</string>
    <string name="app_custom_setting">售后客服</string>
    <string name="app_project_code">分享二维码</string>
    <string name="app_add_custom">添加售后客服</string>
    <string name="app_add_return_visit">回访</string>
    <string name="app_visit_record">回访记录</string>
    <string name="app_workorder_list">售后</string>
    <string name="app_add_workorder">创建工单</string>
    <string name="app_edit_workorder">编辑工单</string>
    <string name="app_workorder_dispatch">工单派工</string>
    <string name="app_stay_accept">工单详情</string>
    <string name="app_workorder_accept">工单受理</string>
    <string name="app_if_accept">是否受理</string>
    <string name="app_cancal_accept">取消工单</string>
    <string name="app_setting_nexttime">设置下次维保时间</string>
    <string name="app_check_appraise">评价详情</string>
    <string name="app_shouhu_setting">售后设置</string>
    <string name="app_defend_setting">维护设置</string>

    <!--右标题-->
    <string name="right_preserve">保存</string>

    <string name="dis_sousuo">请输入关键词</string>
    <string name="add_custom_shuru">请输入</string>


    <!--新建项目-->
    <string name="newly_pro_proname">请填写项目名称</string>
    <string name="newly_pro_address">请填写项目地址</string>
    <string name="newly_pro_name">请填写客户姓名</string>
    <string name="newly_pro_phone">请填写客户电话</string>
    <string name="newly_pro_level">请选择客户级别</string>
    <string name="newly_pro_guwen">请填写销售顾问</string>
    <string name="newly_pro_money">请填写合同金额</string>
    <string name="newly_pro_time">请选择施工时间</string>

    <!--指派人员-->
    <string name="appoint_person_jl">请选择项目经理</string>
    <string name="appoint_person_ctime">请选择最迟完工时间</string>
    <string name="appoint_person_type">请选择结算类型</string>
    <string name="appoint_person_money">请输入合同金额</string>
    <string name="appoint_person_bl">请输入结算比例</string>
    <string name="appoint_person_xname">请输入项目名称</string>
    <string name="appoint_person_gtiem">请选择工期时间</string>
    <string name="appoint_person_remarks">请在此输入备注信息</string>

    <!--企业信息设置-->
    <string name="company_info_name">请填写企业名称</string>
    <string name="company_info_qc">请填写企业全称</string>
    <string name="company_info_dizhi">请填写企业地址</string>
    <string name="company_info_wz">请填写企业网址</string>
    <string name="company_info_yewu">请选择主营业务</string>
    <string name="company_info_guimo">请选择公司规模</string>

    <!--组织架构-->
    <string name="zuzhi_remarks">请在此输入备注信息</string>

    <!--新建项目-->
    <string name="found_pro_proname">请填写项目名称</string>
    <string name="found_pro_address">请选择项目地址</string>
    <string name="found_pro_address2">请填写详细地址（必填)</string>
    <string name="found_pro_name">请填写客户姓名</string>
    <string name="found_pro_phone">请填写客户电话</string>
    <string name="found_pro_level">请选择客户级别</string>
    <string name="found_pro_gw">请选择销售顾问</string>
    <string name="found_pro_money">请填写合同金额</string>
    <string name="found_pro_time">请选择施工开始时间</string>
    <string name="found_pro_time2">请选择施工结束时间</string>

    <!--售后工单-->
    <string name="word_type">请选择售后类型</string>
    <string name="word_name">请输入联系人</string>
    <string name="word_phone">请输入联系电话</string>
    <string name="word_time">请选择维护时间</string>
    <string name="word_content">请输入描述</string>

    <!--名片-->
    <string name="card_word_year">从业 %1$s 年</string>
    <string name="card_jz">家装 %1$s 个</string>
    <string name="card_gz">工装 %1$s 个</string>
    <string name="card_project">进行中项目 %1$s 个</string>
    <string name="please_install_wechat">请先安装微信</string>
</resources>
