<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_f5f7fa"
            android:orientation="vertical">

            <include layout="@layout/main_title" />

            <TextView
                android:id="@+id/tv_fou_jb"
                style="@style/found_pro_tv"
                android:text="基本信息" />

            <LinearLayout style="@style/found_pro_ll">

                <LinearLayout style="@style/newly_ll_st">

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="项目名称" />

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="*"
                        android:textColor="@color/color_d0021b" />

                    <EditText
                        android:id="@+id/et_fou_proname"
                        style="@style/newly_et_st"
                        android:hint="@string/found_pro_proname" />

                </LinearLayout>

                <View style="@style/line_heng" />

                <LinearLayout
                    style="@style/newly_ll_st"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="项目地址" />

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="*"
                        android:textColor="@color/color_d0021b" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/app_121dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <LinearLayout style="@style/newly_ll_st">

                            <EditText
                                android:id="@+id/et_fou_address"
                                style="@style/newly_et_st2"
                                android:hint="@string/found_pro_address"
                                android:paddingRight="0dp" />

                            <ImageView
                                style="@style/bass_iv_you"
                                android:layout_marginRight="@dimen/app_20dp" />

                        </LinearLayout>

                        <View
                            style="@style/line_heng"
                            android:layout_marginLeft="@dimen/app_18dp" />

                        <LinearLayout style="@style/newly_ll_st">

                            <EditText
                                android:id="@+id/et_fou_detail"
                                style="@style/newly_et_st"
                                android:hint="@string/found_pro_address2" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <View style="@style/line_heng" />

                <LinearLayout style="@style/newly_ll_st">

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="客户姓名" />

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="*"
                        android:textColor="@color/color_d0021b" />

                    <EditText
                        android:id="@+id/et_fou_name"
                        style="@style/newly_et_st"
                        android:hint="@string/found_pro_name" />

                </LinearLayout>

                <View style="@style/line_heng" />

                <LinearLayout style="@style/newly_ll_st">

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="客户电话" />

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="*"
                        android:textColor="@color/color_d0021b" />

                    <EditText
                        android:id="@+id/et_fou_phone"
                        style="@style/newly_et_st"
                        android:hint="@string/found_pro_phone"
                        android:inputType="number" />

                </LinearLayout>

                <View style="@style/line_heng" />

                <LinearLayout style="@style/newly_ll_st">

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="客户级别" />

                    <EditText
                        android:id="@+id/et_fou_level"
                        style="@style/newly_et_st2"
                        android:hint="@string/found_pro_level"
                        android:paddingRight="0dp" />

                    <ImageView
                        style="@style/bass_iv_you"
                        android:layout_marginRight="@dimen/app_20dp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_fou_ht"
                style="@style/found_pro_tv"
                android:text="合同信息" />

            <LinearLayout style="@style/found_pro_ll">

                <LinearLayout style="@style/newly_ll_st">

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="销售顾问" />

                    <EditText
                        android:id="@+id/et_fou_gw"
                        style="@style/newly_et_st2"
                        android:hint="@string/found_pro_gw"
                        android:paddingRight="0dp" />

                    <ImageView
                        style="@style/bass_iv_you"
                        android:layout_marginRight="@dimen/app_20dp" />

                </LinearLayout>

                <View style="@style/line_heng" />

                <LinearLayout style="@style/newly_ll_st">

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="合同金额" />

                    <EditText
                        android:id="@+id/et_fou_money"
                        style="@style/newly_et_st"
                        android:hint="@string/found_pro_money"
                        android:paddingRight="@dimen/app_20dp"
                        android:inputType="number|numberDecimal" />

                    <TextView
                        android:id="@+id/tv_fou_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/color_303133"
                        android:layout_marginRight="@dimen/app_24dp"
                        android:text="元"/>

                </LinearLayout>

                <View style="@style/line_heng" />

                <LinearLayout style="@style/newly_ll_st">

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="合同开始时间" />

                    <EditText
                        android:id="@+id/et_fou_time"
                        style="@style/newly_et_st2"
                        android:hint="@string/found_pro_time"
                        android:paddingRight="0dp" />

                    <ImageView
                        style="@style/bass_iv_you"
                        android:layout_marginRight="@dimen/app_20dp" />

                </LinearLayout>

                <View style="@style/line_heng" />

                <LinearLayout style="@style/newly_ll_st">

                    <TextView
                        style="@style/newly_tv_st"
                        android:text="合同结束时间" />

                    <EditText
                        android:id="@+id/et_fou_time2"
                        style="@style/newly_et_st2"
                        android:hint="@string/found_pro_time2"
                        android:paddingRight="0dp" />

                    <ImageView
                        style="@style/bass_iv_you"
                        android:layout_marginRight="@dimen/app_20dp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/but_fou_commit"
                style="@style/bass_but"
                android:text="提交信息"
                android:background="@drawable/yuanjiao_804a90e2_button_shape"
                android:layout_marginBottom="@dimen/app_11dp"
                android:layout_marginTop="@dimen/app_30dp"/>

        </LinearLayout>

    </ScrollView>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>