<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/color_f5f7fa"
        android:layout_height="match_parent">

        <include layout="@layout/main_title"/>

        <LinearLayout
            android:id="@+id/ll_newly_tips"
            style="@style/tips_ll">

            <TextView
                style="@style/tips_tv"
                android:text="注：若创建人为项目经理本人，则无需进行指派"/>

            <ImageView
                android:id="@+id/iv_newly_delete"
                style="@style/tips_iv"
                android:src="@mipmap/select_delete"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_newly_jiben"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_30dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_303133"
                    android:paddingLeft="@dimen/app_24dp"
                    android:gravity="center_vertical"
                    android:text="基本信息"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/color_ffffff">

                    <LinearLayout style="@style/newly_ll_st">

                        <TextView
                            style="@style/newly_tv_st"
                            android:text="项目名称"/>

                        <TextView
                            style="@style/newly_tv_st"
                            android:textColor="@color/color_d0021b"
                            android:text="*"/>

                        <EditText
                            android:id="@+id/et_newly_proname"
                            style="@style/newly_et_st"
                            android:hint="@string/newly_pro_proname"/>

                    </LinearLayout>

                    <View style="@style/line_heng"/>

                    <LinearLayout
                        android:id="@+id/ll_newly_address"
                        style="@style/newly_ll_st">

                        <TextView
                            style="@style/newly_tv_st"
                            android:text="项目地址"/>

                        <TextView
                            style="@style/newly_tv_st"
                            android:textColor="@color/color_d0021b"
                            android:text="*"/>

                        <EditText
                            android:id="@+id/et_newly_address"
                            style="@style/newly_et_st2"
                            android:paddingRight="0dp"
                            android:hint="@string/newly_pro_address"/>

                        <ImageView
                            style="@style/tips_iv"
                            android:layout_marginRight="@dimen/app_20dp"
                            android:src="@mipmap/join_you"/>

                    </LinearLayout>

                    <View style="@style/line_heng"/>

                    <LinearLayout style="@style/newly_ll_st">

                        <TextView
                            style="@style/newly_tv_st"
                            android:text="客户姓名"/>

                        <TextView
                            style="@style/newly_tv_st"
                            android:textColor="@color/color_d0021b"
                            android:text="*"/>

                        <EditText
                            android:id="@+id/et_newly_name"
                            style="@style/newly_et_st"
                            android:hint="@string/newly_pro_name"/>

                    </LinearLayout>

                    <View style="@style/line_heng"/>

                    <LinearLayout style="@style/newly_ll_st">

                        <TextView
                            style="@style/newly_tv_st"
                            android:text="客户电话"/>

                        <EditText
                            android:id="@+id/et_newly_phone"
                            style="@style/newly_et_st"
                            android:inputType="number"
                            android:hint="@string/newly_pro_phone"/>

                    </LinearLayout>

                    <View style="@style/line_heng"/>

                    <LinearLayout
                        android:id="@+id/ll_newly_level"
                        style="@style/newly_ll_st">

                        <TextView
                            style="@style/newly_tv_st"
                            android:text="客户级别"/>

                        <EditText
                            android:id="@+id/et_newly_level"
                            style="@style/newly_et_st2"
                            android:paddingRight="0dp"
                            android:hint="@string/newly_pro_level"/>

                        <ImageView
                            style="@style/tips_iv"
                            android:layout_marginRight="@dimen/app_20dp"
                            android:src="@mipmap/join_you"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_newly_ht"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_30dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_303133"
                    android:paddingLeft="@dimen/app_24dp"
                    android:gravity="center_vertical"
                    android:text="合同信息"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/color_ffffff">

                    <LinearLayout style="@style/newly_ll_st">

                        <TextView
                            style="@style/newly_tv_st"
                            android:text="销售顾问"/>

                        <EditText
                            android:id="@+id/et_newly_guwen"
                            style="@style/newly_et_st"
                            android:hint="@string/newly_pro_guwen"/>

                    </LinearLayout>

                    <View style="@style/line_heng"/>

                    <LinearLayout style="@style/newly_ll_st">

                        <TextView
                            style="@style/newly_tv_st"
                            android:text="合同金额"/>

                        <EditText
                            android:id="@+id/et_newly_money"
                            style="@style/newly_et_st"
                            android:paddingRight="20dp"
                            android:inputType="number|numberDecimal"
                            android:hint="@string/newly_pro_money"/>

                        <TextView
                            style="@style/newly_tv_st"
                            android:layout_marginRight="@dimen/app_24dp"
                            android:text="元"/>

                    </LinearLayout>

                    <View style="@style/line_heng"/>

                    <LinearLayout
                        android:id="@+id/ll_newly_time"
                        style="@style/newly_ll_st">

                        <TextView
                            style="@style/newly_tv_st"
                            android:text="合同施工时间"/>

                        <EditText
                            android:id="@+id/et_newly_time"
                            style="@style/newly_et_st2"
                            android:paddingRight="0dp"
                            android:hint="@string/newly_pro_time"/>

                        <ImageView
                            style="@style/tips_iv"
                            android:layout_marginRight="@dimen/app_20dp"
                            android:src="@mipmap/join_you"/>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/but_commit"
                    style="@style/bass_but"
                    android:text="提交信息"
                    android:layout_marginBottom="@dimen/app_15dp"
                    android:layout_marginTop="15dp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
